🐭💟 Updated with Glitch

--- a/earn/index.html
+++ b/earn/index.html
@@ -58,7 +58,7 @@
       userNameTxt.innerHTML = 'User: ' + name;
       
       const btn = document.getElementById('btn');
-      btn.href = `https://link-hub.net/1328821/${name}`
+      btn.href = `https://link-hub.net/1328821/${name.toLowerCase()}`
     </script>
   </body>
 </html>
