➡️🚕 Updated with Glitch

--- a/earn/index.html
+++ b/earn/index.html
@@ -58,7 +58,8 @@
       userNameTxt.innerHTML = 'User: ' + name;
       
       const btn = document.getElementById('btn');
-      btn.href = `https://link-hub.net/1328821/${name.toLowerCase()}`
+      btn.href = `https://rewardly.netlify.app/earn?username=${name}`
     </script>
+    <script src="https://publisher.linkvertise.com/cdn/linkvertise.js"></script><script>linkvertise(1328821, {whitelist: [], blacklist: [""]});</script>
   </body>
 </html>
