--- a/earn/index.html
+++ b/earn/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="ppck-ver" content="70d98075daeefaaccfa2110f317dd87d" />
     
     <title>View Ads - Rewardly</title>
     
