--- a/earn/index.html
+++ b/earn/index.html
@@ -51,7 +51,7 @@
     </div>
     
     <script>
-      const queryString = window.location.search;
+      /*const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
       const name = urlParams.get('username');
       
