--- a/earn/index.html
+++ b/earn/index.html
@@ -49,7 +49,12 @@
       
         <a href="#" class="button" id="btn">Earn Robux</a>
     </div>
-    
+    <script type="text/javascript">
+       var uid = '489364';
+       var wid = '738696';
+       var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+       pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+    </script>
     <script>
       /*const queryString = window.location.search;
       const urlParams = new URLSearchParams(queryString);
