Changed ad provider

--- a/earn/index.html
+++ b/earn/index.html
@@ -74,5 +74,7 @@
       
       registerCode();
     </script>
+    
+    <script type="text/javascript" src="https://s.skimresources.com/js/283605X1770029.skimlinks.js"></script>
   </body>
 </html>
